--- a/profiling/generic_low_frequency_example/Makefile
+++ b/profiling/generic_low_frequency_example/Makefile
@@ -1,3 +1,4 @@
 all: spy
 spy: spy.c ../../cacheutils.h
-	gcc -std=gnu11 -O2 -o $@ $< -lrt -pthread -lxdo -lX11
+	clang -std=gnu11 -O2 -o $@ $<
+	@#gcc -std=gnu11 -O2 -o $@ $< -lrt -pthread -lxdo -lX11
